Fix: invisible hover links

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -38,6 +38,11 @@ html {
       color: white;
     }
 
+    // Navbar links on hover.
+    nav.styles_navbar__iBXHV .styles_nav_link__2HELw:hover {
+      color: $lochmara;
+    }
+
     // Active link.
     nav .styles_highlighted__19NLo {
       color: $lochmara;
